# jellyfin-desktop-cef

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.json
.github/workflows/: build-macos.yml  build-windows.yml
cmake/: FindCEF.cmake  GenerateVersion.cmake  embed_all_resources.cmake  embed_resources.cmake
dev/: README.md  download_cef.py
dev/macos/: run.sh
dev/windows/: README.md  build.ps1  build_cef.ps1  build_mpv.ps1  download_mpv.ps1  setup.ps1
docs/plans/: 2025-12-28-hello-world-cef-design.md  2026-01-07-mpris-design.md  2026-01-07-mpris-implementation.md  2026-01-07-overlay-loading-design.md  2026-01-07-overlay-loading-impl.md  2026-01-09-mpris-js-notifications.md  2026-01-18-fix-mpv-error-blocking.md  2026-01-19-windows-support.md
resources/: index.html
resources/macos/: Info.plist.in
src/: cef_app.cpp  cef_app.h  cef_client.cpp  cef_client.h  egl_context.cpp  logging.cpp  logging.h  main.cpp  media_session.cpp  media_session.h  media_session_mpris.cpp  media_session_mpris.h  menu_overlay.cpp  menu_overlay.h  mpv_player_vk.cpp  mpv_player_vk.h  opengl_compositor.cpp  opengl_compositor.h  renderer.cpp  renderer.h  settings.cpp  settings.h  vulkan_compositor.cpp  vulkan_compositor.h  vulkan_context.cpp  vulkan_context.h  wayland_subsurface.cpp  wayland_subsurface.h
src/browser/: browser_stack.cpp  browser_stack.h
src/cef/: cef_app.cpp  cef_app.h  cef_client.cpp  cef_client.h  cef_thread.cpp  cef_thread.h  resource_handler.cpp  resource_handler.h
src/compositor/: metal_compositor.h  metal_compositor.mm  opengl_compositor.h  (+3 more)
(+57 files in other folders)
